--- a/src/widgets/pages/ui/page-footer/PageFooter.module.css
+++ b/src/widgets/pages/ui/page-footer/PageFooter.module.css
@@ -68,7 +68,7 @@
 }
 
 @media (max-width: 520px) {
-  br {
+  .br {
     display: none;
   }
 }
